fix:调整设置界面